--- a/assets/CSS/kingsCup.css
+++ b/assets/CSS/kingsCup.css
@@ -22,18 +22,36 @@
     align-items: center;
     position: relative;
 }
-#cardArea h3{
-    color: white;
-}
-#CardName {
-    font-size: 28px;
+.MiddleCardName, .newMiddleCardName {
+    font-size: 100px;
     font-weight: bolder;
+    position: absolute;
+    top: 36%;
+    left: 50%;
+}
+.LeftCardName, .newLeftCardName {
+    font-size: 40px;
+    font-weight: bolder;
+    position: absolute;
+    top: 10px;
+    left: 10px;
+}
+.RightCardName, .newRightCardName {
+    font-size: 40px;
+    font-weight: bolder;
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    transform: rotate(180deg);
 }
 #toDo {
     font-size: 24px;
     font-family: sans-serif;
     margin: 10px;
     text-align: center;
+    position: absolute;
+    bottom: 10px;
+    color: white;
 }
 #newCard {
     display: flex;
@@ -58,4 +76,26 @@
 }
 #CardPicture {
     z-index: 2;
+}
+#CardPicture img.middleSymbol, #newCardPicture img.middleSymbol {
+    height: 90px;
+    width: 90px;
+    position: absolute;
+    top: 37%;
+    right: 50%;
+}
+#CardPicture img.leftSymbol, #newCardPicture img.leftSymbol {
+    height: 30px;
+    width: 30px;
+    position: absolute;
+    top: 50px;
+    left: 7px;
+}
+#CardPicture img.rightSymbol, #newCardPicture img.rightSymbol {
+    height: 30px;
+    width: 30px;
+    position: absolute;
+    bottom: 50px;
+    right: 7px;
+    transform: rotate(180deg);
 }
